# eb

./: .gitignore  Cargo.toml  README.md
eb-web/: Cargo.toml  index.html  rust-toolchain.toml  styles-custom.css  styles.css  styles0.css  styles1.css  styles2.css  styles3.css
eb-web/src/: keyboard.rs  main.rs
eb-web/word-lists/: 11-05-21.json  11-06-21.json  2021-11-08.json  2021-11-09.json  2021-11-10.json  2021-11-11.json  2021-11-12.json  2021-11-13.json  2021-11-14.json  2021-11-15.json  2021-11-16.json  2021-11-17.json  2021-11-18.json  2021-11-19.json  2021-11-20.json  2021-11-21.json  2021-11-22.json  2021-11-23.json  2021-11-24.json  2021-11-25.json  2021-11-26.json  2021-11-27.json  2021-11-28.json  2021-11-29.json  2021-11-30.json  2021-12-01.json  2021-12-02.json  2021-12-03.json  2021-12-04.json  2021-12-05.json  2021-12-06.json  2021-12-07.json  2021-12-08.json  2021-12-09.json  2021-12-10.json  2021-12-11.json  2021-12-12.json  2021-12-13.json  2021-12-14.json  2021-12-15.json  (+83 more)
eb-words/: Cargo.toml
eb-words/src/: main.rs
eb-words/wordlists/: american-words.40  british_variant_1-words.60  british_variant_1-words.80  british_variant_2-words.60  british_variant_2-words.80  british_variant_2-words.95  canadian-words.40  canadian_variant_1-words.60  canadian_variant_1-words.80  canadian_variant_2-upper.50  canadian_variant_2-words.55  canadian_variant_2-words.60  canadian_variant_2-words.70  canadian_variant_2-words.80  canadian_variant_2-words.95  english-abbreviations.80  english-proper-names.50  english-proper-names.60  english-proper-names.70  (+22 more)
(+1 files in other folders)
