[package]
name = "eb-web"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.18.0"
rand = { version = "0.8.4", features = ["getrandom"] }
getrandom = { version = "0.2.3", features = ["js"]}
serde = { version = "1", features = ["derive"]}
serde_json = "1"